--- a/src/main/frontend/src/components/loginAndRegistration/Forms.module.css
+++ b/src/main/frontend/src/components/loginAndRegistration/Forms.module.css
@@ -27,7 +27,7 @@
     align-items: flex-start;
     width: 550px;
     height: 120px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
   
 .formInput {
